<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.CreateNoteActivity">

    <include layout="@layout/common_header"
        android:id="@+id/header"/>

    <EditText
        android:id="@+id/noteHeading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150"
        android:layout_below="@+id/header"
        android:hint="@string/enter_text_here"
        style="@style/CreateNoteEditText"/>

    <TextView
        style="@style/LargeBlackTextView"
        android:id="@+id/clickSaveNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_saved_notes"
        android:layout_below="@+id/noteHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp15"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:text="@string/save"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>